js262/test/language/literals/regexp/S7.8.5_A1.5_T1.js


/*---
esid: prod-RegularExpressionBackslashSequence
info: |
  RegularExpressionBackslashSequence ::
  \ RegularExpressionNonTerminator

  RegularExpressionNonTerminator ::
    SourceCharacter but not LineTerminator

description: >
  A RegularExpressionBackslashSequence may not contain a <LF>

negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/\
/
